--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -28,6 +28,14 @@
         .form-item .footer span {
             margin-right: .5rem;
         }
+
+        .status-false {
+            color: #f86c6b;
+        }
+
+        .status-true {
+            color: #1da142;
+        }
     </style>
 </head>
 <body class="app">
