--- a/src/main/resources/templates/modules/material.html
+++ b/src/main/resources/templates/modules/material.html
@@ -50,7 +50,8 @@
 
                             <select th:disabled="${p.configurer.disabled == true}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).SELECT}" class="form-control" th:id="${p.name}" th:name="${p.name}"
                                     th:placeholder="${p.configurer.placeholder}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
-                                <option th:each="option : ${p.configurer.options}" th:value="${option.name}" th:text="${option.label}" th:selected="${option.name eq p.value}"></option>
+                                 <option th:if="${p.configurer.datasource == null}" th:each="option : ${p.configurer.options}" th:value="${option.name}" th:text="${option.label}" th:selected="${option.name eq p.value}"></option>
+                                <sp:option th:if="${p.configurer.datasource != null}" th:attr="key=${p.configurer.datasource},group=${(p.configurer.getAdditionalInfo == null || p.configurer.getAdditionalInfo().get('group') == null) ? null : 'group'}" th:value="${p.value}" emptyItemText/>
                             </select>
 
                             <th:block th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).FILE}">
