--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -67,10 +67,6 @@
                         <sp:select  id="plantId" name="plantId" key="core_plant" th:value="${po.plantId}" class="form-control" hideAllItem/>
                     </div>
                     <div class="form-group">
-                        <label class="col-form-label mr-2 required" for="deliveryDate">交货日期</label>
-                        <input class="form-control" type="text" id="deliveryDate" name="deliveryDate" required th:value="${po.deliveryDate == null ? #calendars.format(#calendars.createNow(), 'yyyy-MM-dd') : po.deliveryDate}">
-                    </div>
-                    <div class="form-group">
                         <label class="col-form-label mr-2">状态</label>
                         <sp:select  id="status" name="status" key="purchase_order_status" class="form-control" th:value="${po.status}" hideAllItem/>
                     </div>
@@ -150,6 +146,9 @@
         <div class="operator-bar text-center" id="operator-bar" sec:authorize="${hasAuthority('pur_purchase_order_add') or hasAuthority('pur_purchase_order_edit')}">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
+
+            <button class="btn btn-secondary ml-2" type="button" name="send" onclick="download()" th:if="${po.id != null}">
+                <i class="fa fa-upload"></i> 下载订单</button>
         </div>
     </div>
 </th:block>
@@ -272,6 +271,13 @@
                     width: 100,
                     title: "含税总计",
                     required: false,
+                },
+                {
+                    type: "date",
+                    name: "deliveryDate",
+                    width: 150,
+                    title: "交货日期",
+                    required: true,
                 },
                 {
                     type: "text",
@@ -408,6 +414,10 @@
                     reloadTab('purchase_order_list')
                 }
             });
+        }
+
+        function download() {
+            window.location = "/purchase_order/" + document.getElementById('id').value + "/download"
         }
 
         $('#goods_receipt_container').table({
