--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -24,8 +24,12 @@
             max-height: calc(100vh - 630px);
         }
 
+        #goods_receipt_container .table-fixed-container {
+            max-height: 350px;
+        }
+
         .card-body-scroll-panel {
-            max-height: 300px;
+            max-height: 350px;
         }
 
         .table-fixed-container > table {
