--- a/src/main/resources/templates/modules/partner.html
+++ b/src/main/resources/templates/modules/partner.html
@@ -200,11 +200,15 @@
                 }
             },
             {
-                // type: "text",
                 type: "label",
-                name: "materialText",
-                title: "规格",
-                // disabled: true
+                name: "materialName",
+                width: 100,
+                title: "名称"
+            },
+            {
+                type: "label",
+                name: "materialSpecification",
+                title: "规格"
             },
             {
                 type: "select",
