--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -48,7 +48,7 @@
                     <input id="code" type="hidden" name="code" th:value="${po.code == null ? '1' : po.code}">
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="partnerId">供应商</label>
-                        <sp:select  id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required onchange="changeVendor(this)"/>
+                        <sp:select  id="partnerId" name="partnerId" key="core_partner_vendor" th:value="${po.partnerId}" class="form-control" emptyItemText required onchange="changeVendor(this)" th:attr="disabled=${po.id != null}"/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2 required" for="contactPerson">联系人</label>
@@ -107,7 +107,9 @@
                                 <tr>
                                     <th style="width: 50px" data-index>序号</th>
                                     <th style="width: 100px" class="sortable active asc">物料</th>
-                                    <th>描述</th>
+                                    <th style="width: 100px;">名称</th>
+                                    <th>规格</th>
+                                    <th style="width: 100px;">颜色</th>
                                     <th style="width: 100px">基本单位</th>
                                     <th style="width: 100px" class="sortable text-right">订单数量</th>
                                     <th style="width: 120px" class="sortable text-right" data-sort-type="number">已收货数量</th>
@@ -122,7 +124,9 @@
                                 <tr th:each="s: ${goodsReceiptItemList}">
                                     <td th:text="${sStat.index + 1}" data-index></td>
                                     <td th:text="${s.materialCode}" th:data-sort-value="${s.materialCode}"></td>
-                                    <td th:text="${s.materialText}" th:data-sort-value="${s.materialText}"></td>
+                                    <td th:text="${s.materialName}" th:data-sort-value="${s.materialName}"></td>
+                                    <td th:text="${s.materialSpecification}" th:data-sort-value="${s.materialSpecification}"></td>
+                                    <td th:text="${s.color}" th:data-sort-value="${s.color}"></td>
                                     <td th:text="${s.unitText}" th:data-sort-value="${s.unitText}"></td>
                                     <td th:text="${#numbers.formatDecimal(s.quantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.quantity}" th:class="text-right"></td>
                                     <td th:text="${#numbers.formatDecimal(s.goodsReceiptQuantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.goodsReceiptQuantity}" th:class="text-right"></td>
@@ -223,7 +227,13 @@
                 },
                 {
                     type: "label",
-                    name: "materialText",
+                    name: "materialName",
+                    width: 100,
+                    title: "名称"
+                },
+                {
+                    type: "label",
+                    name: "materialSpecification",
                     title: "规格"
                 },
                 {
@@ -432,6 +442,11 @@
             if (itemList) {
                 $editableTable.editableTablePlus('setValue', itemList)
                 calcTotalAmount()
+
+                // 历史的不能修改物料和删除
+                let $trs = $editableTable.editableTablePlus('getEditRow')
+                $trs.find('[name=materialCode]').attr('disabled', true)
+                // $trs.find('td.operator').hide()
             }
         }
     </script>
