--- a/src/main/resources/templates/modules/purchase/purchase_order_batch.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order_batch.html
@@ -153,7 +153,13 @@
                 },
                 {
                     type: "label",
-                    name: "materialText",
+                    name: "materialName",
+                    width: 100,
+                    title: "名称"
+                },
+                {
+                    type: "label",
+                    name: "materialSpecification",
                     title: "规格"
                 },
                 {
