--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -137,7 +137,7 @@
                                                 <tbody>
                                                 <tr v-for="d in c.componentDetailList">
                                                     <template v-if="!d.bomTemplate">
-                                                        <td style="padding: 0;"><input class="form-control material" type="text" :disabled="d.type === 'MATERIAL'" :readonly="d.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="d.value.materialCode" :component_detail_id="d.id" :component_id="d.componentId" :type_instance_id="d.typeInstanceId" required="required" :placeholder="d.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="d.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="d.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="d.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" disabled="disabled" v-model="d.value.color"><option v-for="option in d.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\d+(\.\d{1,3})?$" title="必须数字" name="quantity" v-model="d.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="d.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="d.value.unit"></td><td v-if="!d.bomTemplate" style="padding: 0;"><input class="form-control" type="text" v-model="d.value.remark" autocomplete="off" name="remark"></td>
+                                                        <td style="padding: 0;"><input class="form-control material" type="text" :disabled="d.type === 'MATERIAL'" :readonly="d.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="d.value.materialCode" :component_detail_id="d.id" :component_id="d.componentId" :type_instance_id="d.typeInstanceId" required="required" :placeholder="d.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="d.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="d.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="d.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" :disabled="d.value.color ? false : true" v-model="d.value.color"><option v-for="option in d.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\d+(\.\d{1,3})?$" title="必须数字" name="quantity" v-model="d.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="d.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="d.value.unit"></td><td v-if="!d.bomTemplate" style="padding: 0;"><input class="form-control" type="text" v-model="d.value.remark" autocomplete="off" name="remark"></td>
                                                     </template>
 
                                                     <!--第二层-->
@@ -163,7 +163,7 @@
                                                                         <tbody>
                                                                         <tr v-for="dd in cc.componentDetailList">
                                                                             <template v-if="!dd.bomTemplate">
-                                                                                <td style="padding: 0;"><input class="form-control material" type="text" :disabled="dd.type === 'MATERIAL'" :readonly="dd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="dd.value.materialCode" :component_detail_id="dd.id" :component_id="dd.componentId" :type_instance_id="dd.typeInstanceId" required="required" :placeholder="dd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="dd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="dd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="dd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" disabled="disabled" v-model="dd.value.color"><option v-for="option in dd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\d+(\.\d{1,3})?$" title="必须数字" name="quantity" v-model="dd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="dd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="dd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="dd.value.remark" autocomplete="off" name="remark"></td>
+                                                                                <td style="padding: 0;"><input class="form-control material" type="text" :disabled="dd.type === 'MATERIAL'" :readonly="dd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="dd.value.materialCode" :component_detail_id="dd.id" :component_id="dd.componentId" :type_instance_id="dd.typeInstanceId" required="required" :placeholder="dd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="dd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="dd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="dd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" :disabled="d.value.color ? false : true" v-model="dd.value.color"><option v-for="option in dd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\d+(\.\d{1,3})?$" title="必须数字" name="quantity" v-model="dd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="dd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="dd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="dd.value.remark" autocomplete="off" name="remark"></td>
                                                                             </template>
                                                                             <!--第三层-->
                                                                             <td colspan="7" v-if="dd.bomTemplate">
@@ -188,7 +188,7 @@
                                                                                                 <tbody>
                                                                                                 <tr v-for="ddd in ccc.componentDetailList">
                                                                                                     <template  v-if="!ddd.bomTemplate">
-                                                                                                        <td style="padding: 0;"><input class="form-control material" type="text" :disabled="ddd.type === 'MATERIAL'" :readonly="ddd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="ddd.value.materialCode" :component_detail_id="ddd.id" :component_id="ddd.componentId" :type_instance_id="ddd.typeInstanceId" required="required" :placeholder="ddd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="ddd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="ddd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="ddd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" disabled="disabled" v-model="ddd.value.color"><option v-for="option in ddd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\dd+(\.\dd{1,3})?$" title="必须数字" name="quantity" v-model="ddd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="ddd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="ddd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="ddd.value.remark" autocomplete="off" name="remark"></td>
+                                                                                                        <td style="padding: 0;"><input class="form-control material" type="text" :disabled="ddd.type === 'MATERIAL'" :readonly="ddd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="ddd.value.materialCode" :component_detail_id="ddd.id" :component_id="ddd.componentId" :type_instance_id="ddd.typeInstanceId" required="required" :placeholder="ddd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="ddd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="ddd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="ddd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" :disabled="d.value.color ? false : true" v-model="ddd.value.color"><option v-for="option in ddd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\dd+(\.\dd{1,3})?$" title="必须数字" name="quantity" v-model="ddd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="ddd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="ddd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="ddd.value.remark" autocomplete="off" name="remark"></td>
                                                                                                     </template>
 
                                                                                                     <!--第四层-->
@@ -213,7 +213,7 @@
                                                                                                                         </thead>
                                                                                                                         <tbody>
                                                                                                                         <tr v-for="dddd in cccc.componentDetailList">
-                                                                                                                            <td v-if="!dddd.bomTemplate" style="padding: 0;"><input class="form-control material" type="text" :disabled="dddd.type === 'MATERIAL'" :readonly="dddd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="dddd.value.materialCode" :component_detail_id="dddd.id" :component_id="dddd.componentId" :type_instance_id="dddd.typeInstanceId" required="required" :placeholder="dddd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="dddd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="dddd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="dddd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" disabled="disabled" v-model="dddd.value.color"><option v-for="option in dddd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\ddd+(\.\ddd{1,3})?$" title="必须数字" name="quantity" v-model="dddd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="dddd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="dddd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="dddd.value.remark" autocomplete="off" name="remark"></td>
+                                                                                                                            <td v-if="!dddd.bomTemplate" style="padding: 0;"><input class="form-control material" type="text" :disabled="dddd.type === 'MATERIAL'" :readonly="dddd.type === 'MATERIAL'" autocomplete="off" name="materialCode" v-model="dddd.value.materialCode" :component_detail_id="dddd.id" :component_id="dddd.componentId" :type_instance_id="dddd.typeInstanceId" required="required" :placeholder="dddd.placeholder" @click="showMaterialDialog"><input class="form-control" type="hidden" name="materialId" v-model="dddd.value.materialId" required="required" value=""></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialName" v-model="dddd.value.materialName"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="materialSpecification" v-model="dddd.value.materialSpecification"></td><td><select class="form-control" name="color" required="required" title="请填写颜色" :disabled="d.value.color ? false : true" v-model="dddd.value.color"><option v-for="option in dddd.options" v-text="option" :value="option"></option></select></td><td><input class="form-control" type="text" autocomplete="off" pattern="^\ddd+(\.\ddd{1,3})?$" title="必须数字" name="quantity" v-model="dddd.quantity" disabled required="required"></td><td><input class="form-control" type="text" value="" autocomplete="off" disabled="disabled" readonly="readonly" name="unitText" v-model="dddd.value.unitText" required="required"><input class="form-control" type="hidden" name="unit" required="required" v-model="dddd.value.unit"></td><td style="padding: 0;"><input class="form-control" type="text" v-model="dddd.value.remark" autocomplete="off" name="remark"></td>
                                                                                                                         </tr>
                                                                                                                         </tbody>
                                                                                                                     </table>
@@ -320,11 +320,11 @@
         let formHeader = document.getElementById('form-header');
         let formItem = document.getElementById('form-item');
 
-        function showBOMDetail($tr, materialId, itemId, callback) {
+        function showBOMDetail($tr, materialId, itemId, isCopy, callback) {
             if (materialId && $tr[0].form && materialId === $tr[0].form.materialId) {
                  vue.$data.form = $tr[0].form
             } else if (materialId) {
-                $.get('/produce_orders/bom?materialId=' + materialId + (itemId ? ('&itemId=' + itemId) : ''), function (res) {
+                $.get('/produce_orders/bom?materialId=' + materialId + (itemId ? ('&itemId=' + itemId) : '') + (isCopy != undefined ? ('&isCopy=' + isCopy) : ''), function (res) {
                     res.materialId = materialId
                     $tr[0].form = vue.$data.form = res
                     callback && callback($tr[0].form)
@@ -370,19 +370,14 @@
                         $tr.find(':input[name=color]')
                             .attr('disabled', !row.batchManagement)
                             .attr('readonly', !row.batchManagement)
-                        // TODO 获取历史item
-                        // row.id => 改成materialId
-                        debugger
-                        showBOMDetail($tr, row.id, row.itemId, function (form) {
-                            // 清除id信息
-                            debugger
+
+                        showBOMDetail($tr, row.materialId, row.item_id, true, function (form) {
                         })
                     }
                 },
                 {
                     type: "label",
                     name: "materialName",
-                    width: 100,
                     title: "名称"
                 },
                 {
@@ -393,7 +388,7 @@
                 {
                     type: "select",
                     name: "color",
-                    width: 100,
+                    width: 80,
                     title: "颜色",
                     datasource: $('#color'),
                     required: true,
@@ -403,7 +398,7 @@
                     type: "decimal",
                     name: "quantity",
                     title: "数量",
-                    width: 100,
+                    width: 60,
                     required: true,
                     align: 'right'
                 },
@@ -411,7 +406,7 @@
                     type: "text_label",
                     name: "unit",
                     title: "单位",
-                    width: 100,
+                    width: 60,
                     disabled: true,
                     required: false,
                 },
@@ -654,5 +649,8 @@
         })
     </script>
 </th:block>
+<style>
+    @media (min-width: 576px) {.dialog-input .modal-dialog {max-width: 820px!important;}}
+</style>
 </body>
 </html>
