--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -309,12 +309,12 @@
             //     allowClose: false
             // });
 
-            // nthTabs.addTab({
-            //     id: "pur_purchase_order_batch_add",
-            //     title: '采购订单2',
-            //     url: "/purchase_order/batch",
-            //     allowClose: false
-            // });
+            nthTabs.addTab({
+                id: "pur_purchase_order_batch_add",
+                title: '采购订单',
+                url: "/purchase_order/batch",
+                allowClose: false
+            });
 
             // nthTabs.addTab({
             //     id: "purchase_order_list",
@@ -337,12 +337,12 @@
             //     allowClose: false
             // });
 
-            nthTabs.addTab({
-                id: "produce_orders",
-                title: '生产单',
-                url: "/produce_orders/new",
-                allowClose: false
-            });
+            // nthTabs.addTab({
+            //     id: "produce_orders",
+            //     title: '生产单',
+            //     url: "/produce_orders/new",
+            //     allowClose: false
+            // });
 
             // nthTabs.addTab({
             //     id: "core_partner",
