chore: 表格验证错误高亮显示

--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -83,6 +83,7 @@
 
         .table-editor .form-control.is-invalid, .was-validated .table-editor .form-control:invalid {
             padding-right: .5rem;
+            border-width: 1px;
         }
         /*验证样式结束*/
 
@@ -114,7 +115,8 @@
             padding-left: 12px;
         }
 
-        .table-bordered thead td, .table-bordered thead th {
+        .table-bordered thead td
+        /*.table-bordered thead th*/ {
             border-width: 1px;
         }
 
