--- a/src/main/resources/static/css/edit-table.css
+++ b/src/main/resources/static/css/edit-table.css
@@ -1,6 +1,7 @@
 .table-editor .form-control {
     padding: 0 .5rem;
-    border: none;
+    /*border: none;*/
+    border-width: 0;
     border-radius: 0;
     height: 32px;
 }
